[package]
name = "mirage"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.36", features = ["derive"] }
log = "0.4.27"
md5 = "0.7.0"
pretty_env_logger = "0.5.0"
serde = { version = "1.0.219", features = ["derive", "serde_derive"] }
serde_json = "1.0.140"
symlink = "0.1.0"
thiserror = "2.0.12"
walkdir = "2.5.0"

[dev-dependencies]
tempfile = "3.19.1"
